# opensperm

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
cli/: README.md
cli/opensperm-cli/: Cargo.toml
cli/opensperm-cli/src/: init.rs  main.rs  package.rs  policy.rs  run_config.rs  test_cmd.rs
docs/: PRINCIPLES.md
docs/schemas/: ipc-error-codes.md  ipc.schema.json  skill-manifest.schema.json
examples/: fail_transcript.json  plan.json  policy.json  registry.yml  run.yml  transcript.json
examples/tools/: http_fetch.sh  http_mock.sh  reverse.sh  uppercase.sh
landing/: index.html
policies/: README.md
runtime/: README.md
runtime/opensperm-runtime/: Cargo.toml
runtime/opensperm-runtime/src/: agent.rs  approvals.rs  docker.rs  egress.rs  errors.rs  ipc.rs  lib.rs  limits.rs  logging.rs  memory.rs  observability.rs  planner.rs  policy.rs  registry_config.rs  sandbox.rs  seccomp.rs  signer.rs  signing.rs  stream.rs  tool_registry.rs
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: contract-test.ts  index.ts  manifest.ts  runtime-shim.ts  tool.ts
tests/golden/: README.md
