[package]
name = "opensperm-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
opensperm-runtime = { path = "../../runtime/opensperm-runtime" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
